# rimor

./: .gitignore  3.txt  Cargo.toml  README.md  app-51d80bf2884d0305.js  app-51d80bf2884d0305_bg.wasm  app-6e5b356f06bd37ab.js  app-6e5b356f06bd37ab_bg.wasm  index.html
.github/workflows/: pages.yml  rust.yml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
pathfinding/: Cargo.toml
pathfinding/src/: bfs.rs  lib.rs  lp.rs
src/: main.rs  pathfinding.rs
