[package]
name = "path_finding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.31.1"
egui-file-dialog = "0.9.0"
good_lp = { version = "1.12.0", features = ["microlp"], default-features = false }
web-sys = "0.3.77"


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
log = "0.4.20"
web-sys = "0.3.70"