[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
rfd = "0.15.3"
web-sys = "0.3.77"
pathfinding = { path = "../pathfinding" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
log = "0.4.20"
web-sys = "0.3.70"